# sphinxcontrib-nexus

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/notes/: issue26_trace_overlay_spike.md
sphinxcontrib/nexus/: __init__.py  _mappings.py  _serialize.py  ast_analyzer.py  brief.py  cli.py  directives.py  export.py  extractors.py  fingerprint.py  graph.py  ingest.py  merge.py  query.py  registry.py  runtime.py  server.py  visualize.py  workspace.py
sphinxcontrib/nexus/skills/behavioral-auto-regression/: SKILL.md  reference.md
sphinxcontrib/nexus/skills/nexus-cli/: SKILL.md
sphinxcontrib/nexus/skills/nexus-debugging/: SKILL.md
sphinxcontrib/nexus/skills/nexus-exploring/: SKILL.md  reference.md
sphinxcontrib/nexus/skills/nexus-guide/: SKILL.md
sphinxcontrib/nexus/skills/nexus-impact/: SKILL.md
sphinxcontrib/nexus/skills/nexus-migration/: SKILL.md
sphinxcontrib/nexus/skills/nexus-refactoring/: SKILL.md
sphinxcontrib/nexus/skills/nexus-verification/: SKILL.md
tests/: conftest.py  test_ast_analyzer.py  test_brief.py  test_cli.py  test_config.py  test_dead_functions.py  test_decorators.py  test_directives.py  test_discriminations.py  test_export.py  test_fingerprint.py  test_fixture_e2e.py  test_graph.py  test_integration.py  test_lsp_parity.py  test_merge.py  test_native_place.py  test_new_features.py  test_protocol_conformers.py  test_query.py  test_reexport.py  test_registry.py  test_reload.py  test_runtime_ingest.py  test_runtime_overlay.py  test_serialize.py  test_server_registry.py  test_twin_paths.py  test_usage_journal.py  test_workspace.py
tests/fixtures/minimal_project/: conf.py  index.rst  registry.yaml
tests/roots/test-basic/: index.rst  module.rst
tests/roots/test-math/: conf.py  index.rst
(+14 files in other folders)
